# LSTM-ER

./: CMakeLists.txt  LICENSE  README.md
data/: README.md
data/ace2004/: ace2ann.py  run.zsh  train_list  train_list_fixed
data/ace2004/split/: cv0  cv1  cv2  cv3  cv4
data/ace2005/: run.zsh
data/common/: fix_sentence_break.py  standoff.py
data/semeval-2010/: conv_test.py  conv_train.py  props  run.zsh  test_list  train_list
relation/: CMakeLists.txt  Document.cpp  Document.h  Parameter.cpp  Parameter.h  RelLstmModel.cpp  RelLstmModel.h  RelationExtraction.cpp  Table.cpp  Table.h
relation/cnn/: adeptreelstm.cc  adeptreelstm.h  deptreelstm.cc  deptreelstm.h  zlstm.cc  zlstm.h
relation/dict/: txt2bin.cc
yaml/: parameter-ace2005.yaml  parameter-semeval-2010.yaml
